fix: hovering over tags dark mode, add title to articles, better Titles

--- a/content/.vitepress/theme/style.css
+++ b/content/.vitepress/theme/style.css
@@ -17,7 +17,7 @@ body {
 
 h1 {
   font-size: 2.25rem;
-  font-weight: 700;
+  font-weight: 900;
   line-height: 1.2;
   margin-top: 0;
   margin-bottom: 0.5em;
